# DominatingSets

./: .gitignore  CMakeLists.txt  DomSAT  NuSC  csv.ipynb  example.gr  example.hgr  findminhs-linux64  graph.cpp  graph.h  highs  hypergraph.cpp  hypergraph.h  hypergraph2.cpp  hypergraph2.h  main.cpp  missing.ipynb  parallel_run.sh  plot.ipynb  run.sh  solution.json  sortcsv.ipynb  table.ipynb  test.lp  testsol
results/ds_exact/: domsat.csv  domsat_reduced.csv  findminhs.csv  findminhs2.csv  gurobi.csv  gurobi2.csv  gurobi_seq.csv  gurobi_seq_reduced.csv  highs.csv  highs_reduced.csv  lp.csv  merged_output.csv  nusc.csv  nusc2.csv  nusc_reduced.csv  properties.csv  reductions.csv  scip.csv  scip_reduced.csv  uwrmaxsat.csv  uwrmaxsat_missing.csv  uwrmaxsat_reduced.csv  uwrmaxsat_reduced_no_edge.csv  uwrmaxsat_reduced_no_vert.csv  uwrmaxsat_reduced_only_dom.csv
results/ds_heuristic/: chills_heuristic.csv  domsat_heuristic.csv  nusc_heuristic.csv
results/exact-private/: domsat.csv  findminhs.csv  highs.csv  highs_reduced.csv  lp.csv  merged_output.csv  nusc.csv  properties.csv  reductions.csv  scip.csv  scip_reduced.csv
results/testset/: domsat.csv  findminhs.csv  gurobi.csv  highs.csv  highs_reduced.csv  lp.csv  merged_output.csv  nusc.csv  properties.csv  reductions.csv  scip.csv  scip_reduced.csv  uwrmaxsat.csv
